--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -58,43 +58,45 @@
         </section>
 
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-bank">New Bank</button>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                <th scope="col"># Id</th>
-                <th scope="col">Bank</th>
-                <th scope="col">Create at</th>
-                <th scope="col">Acctions</th>
-                </tr>
-            </thead>
-            
-            <tbody>
-                {% for bank in banks %}                    
-                <tr>
-                    <th scope="row">{{ bank.id }}</th>
-                    <td>{{ bank.name }}</td>
-                    <td>{{ bank.created_at }}</td>
-                    <td>
-                        <div class="d-flex gap-2">
-                            <button 
-                                type="button" 
-                                class="btn btn-success" 
-                                data-bs-toggle="modal" 
-                                data-bs-target="#edit-bank"
-                                data-id="{{ bank.id }}"
-                                data-name="{{ bank.name }}"
-                            >
-                            Edit
-                            </button>
-                            <form action="{{ url_for('bank.delete', id=bank.id ) }}" method="post">
-                                <button type="submit" class="btn btn-danger">Delete</button>
-                            </form>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
+            <table class="table table-striped  table-hover">
+                <thead class="sticky-top">
+                    <tr>
+                    <th scope="col"># Id</th>
+                    <th scope="col">Bank</th>
+                    <th scope="col">Create at</th>
+                    <th scope="col">Acctions</th>
+                    </tr>
+                </thead>
+                
+                <tbody>
+                    {% for bank in banks %}                    
+                    <tr>
+                        <th scope="row">{{ bank.id }}</th>
+                        <td>{{ bank.name }}</td>
+                        <td>{{ bank.created_at }}</td>
+                        <td>
+                            <div class="d-flex gap-2">
+                                <button 
+                                    type="button" 
+                                    class="btn btn-success" 
+                                    data-bs-toggle="modal" 
+                                    data-bs-target="#edit-bank"
+                                    data-id="{{ bank.id }}"
+                                    data-name="{{ bank.name }}"
+                                >
+                                Edit
+                                </button>
+                                <form action="{{ url_for('bank.delete', id=bank.id ) }}" method="post">
+                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <script>
