--- a/app/templates/credit_cards/index.html
+++ b/app/templates/credit_cards/index.html
@@ -113,8 +113,9 @@
     </section>
     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-credit-card">New
     Credit Card</button>
-    <table class="table table-striped">
-        <thead>
+        <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
+            <table class="table table-striped  table-hover">
+                <thead class="sticky-top">
             <tr>
                 <th scope="col"># Id</th>
                 <th scope="col">Nick Name</th>
@@ -159,7 +160,8 @@
             </tr>
             {% endfor %}
         </tbody>
-    </table>
+            </table>
+        </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
