--- a/app/templates/bank_accounts/index.html
+++ b/app/templates/bank_accounts/index.html
@@ -112,9 +112,15 @@
         </form>
     </section>
 
-    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-bank-account">New
-        Account</button>
-    <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
+    <div class="row">
+        <div class="col-sm">        
+            <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-bank-account"
+            >New Account</button>
+        </div>
+        <div class="col-sm"></div>
+
+    </div>
+    <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 388px;">
         <table class="table table-striped  table-hover">
             <thead class="sticky-top">
                 <tr>
@@ -163,7 +169,9 @@
             </tbody>
         </table>
     </div>
-
+    <div class="col-sm d-flex flex-row-reverse mt-2">
+        <h5>Total Money: ${{ total_money }}</h5>
+    </div>
     <script>
         document.addEventListener('DOMContentLoaded', function(){
             const editBankAccountModal = document.getElementById('edit-bank-account');
