--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -74,6 +74,7 @@
             </div>
         </form>
     </section>
+
     <section class="modal fade" tabindex="-1" id="edit-expense">
         <form id="edit-expense-form">
             <input type="hidden" name="id" id="e-expense-id">
@@ -145,8 +146,27 @@
             </div>
         </form>
     </section>
-    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-expense"
-    id="btn-create-expense-id">New Expense</button>
+
+    <div class="d-flex gap-1 align-items-end">
+        <div class="me-auto">
+            <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-expense"
+            id="btn-create-expense-id">New Expense</button>
+        </div>
+
+        <div class="d-flex gap-1 align-items-end w-75 justify-content-end">
+            <div>
+                <h5>Filter by time: </h5>
+            </div>
+            <div style="width: 40%;">
+                <input type="text" id="start-date-id" class="form-control w-100">
+            </div>
+            <div>
+                <button type="button" class="btn btn-outline-light">search</button>
+            </div>
+        </div>
+    </div>
+
+
     <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
         <table class="table table-striped table-hover">
             <thead class="sticky-top">
@@ -197,7 +217,10 @@
             </tbody>
         </table>
     </div>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../../static/scripts/expenses/filteringByTime.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const cCheckbox = document.getElementById("checkNativeSwitch");
